# M_PFW_etudiant

./: .gitignore  README.md
cgi/caesar/: caesar.cabal  caesar.nix  default.nix  nixops.nix  shell.nix
cgi/caesar/data/: index.html
cgi/caesar/src/: Caesar.hs  Hello.hs
cgi/hellohs/: default.nix  nixops.nix
cgi/hellohs/data/: index.html
cgi/hellohs/hellocabal/: default.nix  hellocabal.cabal  hellocabal.hs  hellocabal.nix
cgi/hellohs/helloghc/: default.nix  helloghc.hs
cgi/make_img/: default.nix  nixops.nix
cgi/make_img/data/: index.html  make_img.py  test.py
cgi/music/: default.nix  music.cabal  music.nix  nixops.nix  shell.nix
cgi/music/data/: index.html
cgi/music/src/: MusicDb.hs  list.hs
cgi/simple_scripts/: default.nix  nixops.nix
cgi/simple_scripts/data/: hello.py  index.html
config-nixos/: README.md  configuration.nix
config-nixos/.config/nixpkgs/: config.nix  emacs.nix  emacswrap  vim.nix  ycm_extra_conf1.py  ycm_extra_conf2.py
config-nixos/.emacs.d/: init.el
nixops/ghcdoc/: nixops.nix
nixops/myhello/: CMakeLists.txt  myhello.cpp
nixops/myhellogtk/: CMakeLists.txt  myhellogtk.cpp
nixops/mypage/: nixops.nix
nixops/mypage/data/: index.html
nixops/pgphptest/: nixops.nix  pgphptest.nix
nixops/pgphptest/data/private/: music.sql
nixops/pgphptest/data/public/: index.html  index.php
nixops/wptest/: wp_nixops.nix
scotty/helloscotty/: helloscotty.cabal  helloscotty.nix  music1.db  music2.db  music2.sql  shell.nix
scotty/helloscotty/src/: CodeCaesarText.hs  helloscotty.hs
scotty/poemhub/: poemhub.cabal  poemhub.nix  poemhub.sql  shell.nix
scotty/poemhub/src/: Main.hs  Model.hs  View.hs
scotty/userapi/: client2.html  shell.nix  timezone_client.hs  userapi.cabal  userapi.nix  users.db  users.sql
scotty/userapi/client/: client1.html  client2.html
scotty/userapi/src/: userapi1.hs
websockets/chat/: chat.cabal  chat.nix  shell.nix
websockets/chat/client/: index.html
websockets/chat/src/: chat.hs
websockets/echo_client/: Main.hs  app.cabal  app.nix  default.nix
websockets/echocaesar/: echocaesar.cabal  echocaesar.nix  shell.nix
websockets/echocaesar/client/: index.html
websockets/echocaesar/src/: CodeCaesar.hs  echocaesar.hs
websockets/echows/: default.nix  echows.cabal  echows.hs  echows.nix  nixops.nix  shell.nix
websockets/echows/client/: index.html
websockets/musicws/: music1.db  musicws.nix  nixops.nix
websockets/musicws/data/: index.html  music1.sql
websockets/musicws/src/: MusicDb.hs  musicws.hs
websockets/musicws0/: default.nix  musicws.cabal  shell.nix
websockets/musicwspg/: default.nix  musicwspg.cabal  musicwspg.nix  nixops.nix  shell.nix
websockets/musicwspg/data/: index.html
websockets/musicwspg/src/: musicwspg.hs
