name:                music
version:             0.1
build-type:          Simple
cabal-version:       >=1.10
license:             BSD3

executable list.cgi
  main-is:             list.hs
  build-depends:       base, network, cgi, postgresql-simple, xhtml, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
