name:                helloscotty
version:             0.1
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable helloscotty
  main-is:             helloscotty.hs
  hs-source-dirs:      src
  build-depends:       base, lucid, mtl, scotty, sqlite-simple, text, wai-extra
  default-language:    Haskell2010
