name:               poemhub
version:            0.1
license:            BSD3
build-type:         Simple
cabal-version:      >=1.10

executable poemhub
  main-is:            Main.hs
  hs-source-dirs:     src
  build-depends:      base, lucid, clay, mtl, scotty, sqlite-simple, text, wai-extra
  default-language:   Haskell2010
