name:               userapi
version:            0.1
license:            BSD3
build-type:         Simple
cabal-version:      >=1.10

executable userapi1.out
  main-is:            userapi1.hs
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unused-top-binds
  build-depends:      aeson, base, mtl, sqlite-simple, lucid, scotty, text, wai-extra, wai-cors

executable timezone_client.out
  main-is:            timezone_client.hs
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unused-top-binds
  build-depends:      aeson, base, http-conduit, text, connection

