name:                chat
version:             0.1
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable chat
  main-is:             chat.hs
  hs-source-dirs:      src
  build-depends:       base >=4.9 && <4.10, websockets, bytestring, network
  default-language:    Haskell2010
