name:                echocaesar
version:             0.1
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable echocaesar
  main-is:             echocaesar.hs
  hs-source-dirs:      src
  build-depends:       base, text, websockets, binary, bytestring, network
  default-language:    Haskell2010
