name:                echows
version:             0.1
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable echows
  main-is:             echows.hs
  build-depends:       base >=4.9 && <4.10, network, text, websockets, bytestring
  default-language:    Haskell2010
