name:                musicws
version:             0.1
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable musicws
  main-is:             musicws.hs
  build-depends:       base >=4.9 && <4.10, network, websockets,
                       bytestring, postgresql-simple
  hs-source-dirs:      src
  default-language:    Haskell2010
