name:                musicwspg
version:             0.1
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable musicwspg
  main-is:             musicwspg.hs
  build-depends:       base, bytestring, network, websockets, text, postgresql-simple
  hs-source-dirs:      src
  default-language:    Haskell2010
